--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_CREATE_USER=https://api-jwt-login.herokuapp.com/user/register
+REACT_APP_CREATE_USER=http://localhost:5000/user/register
+REACT_APP_LOG_USER=http://localhost:5000/user/login
