:bug: Login bug solved

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_CREATE_USER=http://localhost:5000/user/register
-REACT_APP_LOG_USER=http://localhost:5000/user/login
+REACT_APP_CREATE_USER=https://react-api-jwt.herokuapp.com/user/register
+REACT_APP_LOG_USER=https://react-api-jwt.herokuapp.com/user/login
+
+
