--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_CREATE_USER=https://react-api-jwt.herokuapp.com/user/register
-REACT_APP_LOG_USER=https://react-api-jwt.herokuapp.com/user/login
+REACT_APP_CREATE_USER=https://api-jwt-login.herokuapp.com/user/register
+REACT_APP_LOG_USER=https://api-jwt-login.herokuapp.com/user/login
 
 
